Add map message to JSON and find errors
Might be final commit