@@ -1,12 +1,13 @@
 package com.example.demo.serviceImp;
 
 import com.example.demo.exception.UserNotFoundException;
-import com.example.demo.model.*;
+import com.example.demo.model.Category;
+import com.example.demo.model.Message;
+import com.example.demo.model.Product;
 import com.example.demo.payload.request.product.ProductFilterRequest;
 import com.example.demo.payload.request.product.ProductNewRequest;
 import com.example.demo.repository.CategoryRepository;
 import com.example.demo.repository.ProductRepository;
-import com.example.demo.service.AuthenticateService;
 import com.example.demo.service.ProductService;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.servlet.http.HttpServletRequest;
@@ -21,6 +22,7 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 @Service
@@ -34,25 +36,26 @@ public class ProductServiceImp implements ProductService {
     @Override
     public ResponseEntity<?> addNewProduct(ProductNewRequest productNewRequest, HttpServletRequest request) {
 
-
         Category category = findCategoryById(productNewRequest.getCategoryId());
         if (category == null) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.CATEGORY_NOT_FOUND);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.CATEGORY_NOT_FOUND));
         }
 
         Product product = new Product();
         if (productRepository.existsByName(productNewRequest.getPrdName())) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.PRODUCT_NAME_EXISTED);
+
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.PRODUCT_NAME_EXISTED));
         }
+
         product.setCategoryId(category.getCategoryId());
         addNewProduct(productNewRequest, product);
         productRepository.save(product);
-        return ResponseEntity.status(HttpStatus.OK).body(Message.CREATE_PRODUCT_SUCCESS);
+        return ResponseEntity.status(HttpStatus.OK).body(Message.map(Message.CREATE_PRODUCT_SUCCESS));
     }
 
     @Override
     public ResponseEntity<?> getProductList(ProductFilterRequest filter, Pageable pageable) {
-        Specification<Product> spec = buildSpecification(filter, false,null);
+        Specification<Product> spec = buildSpecification(filter, false, null);
         Page<Product> productList = productRepository.findAll(spec, pageable);
 
         return ResponseEntity.status(HttpStatus.OK).body(productList);
@@ -60,84 +63,102 @@ public class ProductServiceImp implements ProductService {
 
     @Override
     public ResponseEntity<?> getProductListForUser(ProductFilterRequest filter, Pageable pageable) {
-        List<Long> categoryList = categoryRepository.getCategoriesByStatus().stream().map(Category::getCategoryId).toList();
+        List<Long> categoryList = categoryRepository.getCategoriesByStatus()
+                .stream()
+                .map(Category::getCategoryId)
+                .toList();
         Specification<Product> spec = buildSpecification(filter, true, categoryList);
         Page<Product> productList = productRepository.findAll(spec, pageable);
 
         return ResponseEntity.status(HttpStatus.OK).body(productList);
     }
 
-    private Specification<Product> buildSpecification(ProductFilterRequest filter, boolean isForUser, List<Long> inactiveCategoryIds) {
+    private Specification<Product> buildSpecification(
+            ProductFilterRequest filter,
+            boolean isForUser,
+            List<Long> inactiveCategoryIds
+    ) {
         return (root, query, criteriaBuilder) -> {
-        Predicate predicate = criteriaBuilder.conjunction();
-        if (filter != null) {
-            if (filter.getCategoryId() != null) {
-                predicate = criteriaBuilder.and(
-                        predicate,
-                        criteriaBuilder.equal(root.get("categoryId"), filter.getCategoryId()));
+            Predicate predicate = criteriaBuilder.conjunction();
+            if (filter != null) {
+                if (filter.getCategoryId() != null) {
+                    predicate = criteriaBuilder.and(
+                            predicate,
+                            criteriaBuilder.equal(root.get("categoryId"), filter.getCategoryId()));
+                }
+                if (filter.getKeyword() != null) {
+                    predicate = criteriaBuilder.and(
+                            predicate,
+                            criteriaBuilder.like(
+                                    criteriaBuilder.lower(root.get("productName")),
+                                    "%" + filter.getKeyword().toLowerCase() + "%"));
+                }
             }
-            if (filter.getKeyword() != null) {
-                predicate = criteriaBuilder.and(
-                        predicate,
-                        criteriaBuilder.like(
-                                criteriaBuilder.lower(root.get("productName")),
-                                "%" + filter.getKeyword().toLowerCase() + "%"));
-            }
-        }
-        if (isForUser) {
-            predicate = criteriaBuilder.and(predicate, criteriaBuilder.equal(root.get("prdStatus"), 1));
+            if (isForUser) {
+                predicate = criteriaBuilder.and(predicate, criteriaBuilder.equal(root.get("prdStatus"), 1));
 
-        }
+            }
             if (inactiveCategoryIds != null) {
                 predicate = criteriaBuilder.and(
                         predicate,
                         criteriaBuilder.not(root.get("categoryId").in(inactiveCategoryIds))
                 );
             }
-        return predicate;
-    };
+            return predicate;
+        };
     }
 
     @Override
     public ResponseEntity<?> getDetailProduct(Long id) {
-        Product product = productRepository.findById(id).get();
-        if (product != null) {
-            return ResponseEntity.status(HttpStatus.OK).body(product);
+        Product product = productRepository.findById(id).orElse(null);
+
+        if (product == null) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.PRODUCT_NOT_FOUND));
         }
+
         return ResponseEntity.status(HttpStatus.OK).body(product);
     }
 
     @Override
     public ResponseEntity<?> updateProduct(Long id, ProductNewRequest productNewRequest) {
-        Product product = productRepository.findById(id).get();
+        Product product = productRepository.findById(id).orElse(null);
+
         if (product == null) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.PRODUCT_NOT_FOUND);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.PRODUCT_NOT_FOUND));
         }
+
+        if (productRepository.existsByName(productNewRequest.getPrdName()) &&
+                !Objects.equals(product.getProductName(), productNewRequest.getPrdName())) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.PRODUCT_NAME_EXISTED));
+        }
+
         Category category = findCategoryById(productNewRequest.getCategoryId());
         if (category == null) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.CATEGORY_NOT_FOUND);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.CATEGORY_NOT_FOUND));
         }
         product.setCategoryId(category.getCategoryId());
         updateProduct(productNewRequest, product);
         productRepository.save(product);
-        return ResponseEntity.status(HttpStatus.OK).body(Message.UPDATE_PRODUCT_SUCCESS);
+        return ResponseEntity.status(HttpStatus.OK).body(Message.map(Message.UPDATE_PRODUCT_SUCCESS));
     }
 
     @Override
     public ResponseEntity<?> updateStatus(Long id) {
-        Product product = productRepository.findById(id).get();
+        Product product = productRepository.findById(id).orElse(null);
+
         if (product == null) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.PRODUCT_NOT_FOUND);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.PRODUCT_NOT_FOUND));
         }
+
         product.setPrdStatus(product.getPrdStatus() == 1 ? 0 : 1);
         productRepository.save(product);
-        return ResponseEntity.status(HttpStatus.OK).body(Message.UPDATE_PRODUCT_SUCCESS);
+        return ResponseEntity.status(HttpStatus.OK).body(Message.map(Message.UPDATE_PRODUCT_SUCCESS));
     }
 
 
     private void addNewProduct(ProductNewRequest productNewRequest, Product product) {
         LocalDate today = LocalDate.now();
-        String a = "PD" + String.format("%05d", (productRepository.getLastProductId() + 1)); // Ví dụ mã PD00001, PD00002, ...
+        String a = "PD%s".formatted(String.format("%05d", (productRepository.getLastProductId() + 1))); // Ví dụ mã PD00001, PD00002, ...
         product.setProductName(productNewRequest.getPrdName());
         product.setProductCd(a);
         product.setPrdSellPrice(BigDecimal.valueOf(productNewRequest.getPrdSellPrice()));
@@ -153,10 +174,9 @@ public class ProductServiceImp implements ProductService {
     public Category findCategoryById(Long id) {
         Optional<Category> gr = categoryRepository.findById(id);
         if (gr.isEmpty()) {
-            throw new UserNotFoundException("Store not found with username: " + id);
+            throw new UserNotFoundException("User with id: " + id + " is not found");
         }
-        Category grD = gr.get();
-        return grD;
+        return gr.get();
     }
 
 }
