@@ -1,7 +1,5 @@
 package com.example.demo.serviceImp;
 
-import com.example.demo.security.SecurityConfig;
-import com.example.demo.security.JwtTokenProvider;
 import com.example.demo.model.Message;
 import com.example.demo.model.User;
 import com.example.demo.model.enums.UserRole;
@@ -11,10 +9,10 @@ import com.example.demo.payload.authenticate.RegisterRequest;
 import com.example.demo.payload.request.user.ChangePasswordUser;
 import com.example.demo.payload.request.user.UserUpdateRequest;
 import com.example.demo.repository.UserRepository;
+import com.example.demo.security.JwtTokenProvider;
+import com.example.demo.security.SecurityConfig;
 import com.example.demo.service.UserService;
-import jakarta.persistence.criteria.Predicate;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -28,7 +26,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -48,17 +45,17 @@ public class UserServiceImp implements UserService {
     public ResponseEntity<?> registerUser(RegisterRequest registerRequest) {
         boolean userNameExists = userRepository.existsByUserName(registerRequest.getUserName());
         if (userNameExists) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.USER_ALREADY_EXISTS);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.USER_ALREADY_EXISTS));
         }
 
         register(registerRequest);
-        return ResponseEntity.status(HttpStatus.OK).body(Message.CREATE_USER_SUCCESS);
+        return ResponseEntity.status(HttpStatus.OK).body(Message.map(Message.CREATE_USER_SUCCESS));
     }
 
     @Override
     public ResponseEntity<?> registerAdmin(RegisterRequest registerRequest) {
         if (userRepository.count() != 0) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.USER_ALREADY_EXISTS);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.USER_ALREADY_EXISTS));
         }
         User user = new User();
         user.setUserName(registerRequest.getUserName());
@@ -77,22 +74,22 @@ public class UserServiceImp implements UserService {
             User user = userRepository.findUserByUserName(loginRequest.getUserName());
             if (user == null) {
                 //logger
-                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.USER_NOT_FOUND);
+                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Message.map(Message.USER_NOT_FOUND));
             }
 
             String password = loginRequest.getPassword();
             if (!user.getUserName().equals(loginRequest.getUserName())) {
                 //logger
-                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.INVALID_USER);
+                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.INVALID_USER));
             }
 
             if (!passwordEncoder.matches(password, user.getPassword())) {
                 //logger.error(Messages.INVALID_PASSWORD);
-                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.INVALID_PASSWORD);
+                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.INVALID_PASSWORD));
             }
 
             if (user.getUserStatus() != 1) {
-                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.INVALID_USER);
+                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.INVALID_USER));
             }
 
             List<GrantedAuthority> authorities = new ArrayList<>();
@@ -115,20 +112,19 @@ public class UserServiceImp implements UserService {
             String jwt = tokenProvider.generateToken(user);
             List<String> listRoles = authorities.stream()
                     .map(GrantedAuthority::getAuthority)
-                    .collect(Collectors.toList());
-
+                    .toList();
 
             LoginResponse loginResponse = new LoginResponse(
                     user.getUserId(),
                     user.getUserName(),
                     user.getDisplayName(),
                     jwt,
-                    listRoles.get(0)
-                    );
+                    listRoles.getFirst()
+            );
 
             return ResponseEntity.status(HttpStatus.OK).body(loginResponse);
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.INVALID_USER);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.INVALID_USER));
         }
     }
 
@@ -143,16 +139,16 @@ public class UserServiceImp implements UserService {
     public ResponseEntity<?> changePassword(Long id, ChangePasswordUser changePasswordUser) {
         User user = userRepository.findUserById(id);
         if (user == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.USER_NOT_FOUND);
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Message.map(Message.USER_NOT_FOUND));
         }
         if (!passwordEncoder.matches(changePasswordUser.getOldPassword(), user.getPassword())) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.INVALID_PASSWORD);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Message.map(Message.INVALID_PASSWORD));
         }
 
         user.setPassword(passwordEncoder.encode(changePasswordUser.getNewPassword()));
         userRepository.save(user);
 
-        return ResponseEntity.status(HttpStatus.OK).body(Message.CHANGE_PASSWORD_SUCCESS);
+        return ResponseEntity.status(HttpStatus.OK).body(Message.map(Message.CHANGE_PASSWORD_SUCCESS));
     }
 
     @Override
@@ -160,23 +156,23 @@ public class UserServiceImp implements UserService {
 
         User user = userRepository.findUserById(id);
         if (user == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Message.USER_NOT_FOUND);
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Message.map(Message.USER_NOT_FOUND));
         }
 
         user.setDisplayName(userUpdateRequest.getDisplayName());
         user.setUserName(userUpdateRequest.getUserName());
         user.setUserStatus(userUpdateRequest.getUserStatus());
-        user.setUserRole(  userUpdateRequest.getUserRole());
-        user.setUserPhone( userUpdateRequest.getUserPhone());
+        user.setUserRole(userUpdateRequest.getUserRole());
+        user.setUserPhone(userUpdateRequest.getUserPhone());
         userRepository.save(user);
-        return ResponseEntity.status(HttpStatus.OK).body(Message.UPDATE_USER_SUCCESS);
+        return ResponseEntity.status(HttpStatus.OK).body(Message.map(Message.UPDATE_USER_SUCCESS));
     }
 
     @Override
     public ResponseEntity<?> detailUser(Long id) {
         User user = userRepository.findUserById(id);
         if (user == null) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Message.USER_NOT_FOUND);
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Message.map(Message.USER_NOT_FOUND));
         }
         return ResponseEntity.status(HttpStatus.OK).body(user);
     }
@@ -185,8 +181,7 @@ public class UserServiceImp implements UserService {
     public ResponseEntity<?> checkingRegister() {
         if (userRepository.count() == 0) {
             return ResponseEntity.status(HttpStatus.OK).body(true);
-        }
-        else {
+        } else {
             return ResponseEntity.status(HttpStatus.OK).body(false);
         }
     }
@@ -202,7 +197,7 @@ public class UserServiceImp implements UserService {
         );
         user.setUserPhone(registerRequest.getUserPhone());
         user.setDisplayName(registerRequest.getDisplayName());
-        user.setUserRole( registerRequest.getUserRole());
+        user.setUserRole(registerRequest.getUserRole());
         userRepository.save(user);
     }
 }
